# delta-rs

./: .gitignore  Cargo.toml  plan.md
crates/aws/src/: storage.rs
crates/core/: Cargo.toml
crates/core/src/delta_datafusion/: logical.rs  mod.rs  table_provider.rs
crates/core/src/delta_datafusion/cdf/: scan_utils.rs
crates/core/src/delta_datafusion/table_provider/next/: mod.rs
crates/core/src/delta_datafusion/table_provider/next/scan/: mod.rs
crates/core/src/kernel/: mod.rs
crates/core/src/kernel/models/: actions.rs
crates/core/src/kernel/snapshot/: iterators.rs  log_data.rs  log_segment.rs  mod.rs
crates/core/src/logstore/: default_logstore.rs  mod.rs
crates/core/src/logstore/storage/: mod.rs  utils.rs
crates/core/src/operations/: clone.rs  convert_to_delta.rs  create.rs  delete.rs  drop_constraints.rs  encryption.rs  load.rs  load_cdf.rs  mod.rs  optimize.rs  restore.rs  update.rs  vacuum.rs  writer.rs
crates/core/src/operations/merge/: barrier.rs  mod.rs
crates/core/src/operations/write/: encryption.rs  execution.rs  mod.rs  plan.rs  writer.rs
crates/core/src/protocol/: checkpoints.rs
crates/core/src/table/: builder.rs  config.rs  file_format_options.rs  mod.rs  parquet_config.rs
crates/core/src/test_utils/: kms_encryption.rs  mod.rs
crates/core/src/writer/: json.rs  mod.rs  record_batch.rs  stats.rs  test_utils.rs  utils.rs  writer_factory.rs
crates/core/tests/: checkpoint_writer.rs  command_optimize.rs  commands_with_encryption.rs  full_path.rs  integration_datafusion.rs
crates/core/tests/it_datafusion/: command_optimize.rs
crates/deltalake/: Cargo.toml
crates/deltalake/examples/: anda.rs  basic_operations.rs  basic_operations_encryption.rs  benchmark.csv  benchmark.ipynb  benchmark.rs  crypt_fs.rs  encryption.rs  full_path.rs
crates/gcp/src/: storage.rs
crates/hdfs/: Cargo.toml
crates/hdfs/src/: lib.rs
crates/lakefs/src/: logstore.rs
crates/sql/src/: logical_plan.rs
python/: Cargo.toml  pyproject.toml
python/deltalake/: _internal.pyi  table.py
python/deltalake/writer/: properties.py
python/src/: lib.rs
python/test_crypt/: benchmark_encrypt.py  common.py  main.py
python/tests/: test_table_read.py
