[workspace]
members = ["crates/*", "delta-inspect", "python"]
exclude = ["proofs"]
resolver = "2"

[workspace.package]
authors = ["Qingping Hou <dave2008713@gmail.com>"]
rust-version = "1.81"
keywords = ["deltalake", "delta", "datalake"]
readme = "README.md"
edition = "2021"
description = "Native Delta Lake implementation in Rust"
homepage = "https://github.com/delta-io/delta.rs"
license = "Apache-2.0"
documentation = "https://docs.rs/deltalake"
repository = "https://github.com/delta-io/delta.rs"

[profile.release-with-debug]
inherits = "release"
debug = true

# Reducing the debuginfo for the test profile in order to trim the disk and RAM
# usage during development
# <https://github.com/delta-io/delta-rs/issues/1550?
[profile.test]
debug = "line-tables-only"

[workspace.dependencies]
# delta_kernel = { version = "=0.6.0", features = ["default-engine"] }
# delta_kernel = { path = "../delta-kernel-rs/kernel", features = ["sync-engine"]  }
delta_kernel = { git = "https://github.com/corwinjoy/delta-kernel-rs.git", branch = "encryption-basics", features = ["default-engine"]}

# arrow
arrow = {  git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics" }
arrow-arith = { git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics" }
arrow-array = {  git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics", features = ["chrono-tz"] }
arrow-buffer = {  git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics" }
arrow-cast = {  git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics" }
arrow-ipc = {  git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics"}
arrow-json = {  git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics" }
arrow-ord = {  git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics" }
arrow-row = {  git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics" }
arrow-schema = {  git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics" }
arrow-select = {  git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics" }
# object_store = { git = "https://github.com/rok/arrow-rs.git" , features = ["cloud"]}
object_store = {version="0.11.2"  , features = ["cloud"]}
# parquet = { version = "53" }
parquet = { git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics" }

# datafusion
datafusion = { git = "https://github.com/corwinjoy/datafusion.git", branch = "encryption-basics" }
datafusion-expr = { git = "https://github.com/corwinjoy/datafusion.git", branch = "encryption-basics" }
datafusion-common = { git = "https://github.com/corwinjoy/datafusion.git", branch = "encryption-basics" }
datafusion-ffi = { git = "https://github.com/corwinjoy/datafusion.git", branch = "encryption-basics" }
datafusion-functions = { git = "https://github.com/corwinjoy/datafusion.git", branch = "encryption-basics" }
datafusion-functions-aggregate = { git = "https://github.com/corwinjoy/datafusion.git", branch = "encryption-basics" }
datafusion-physical-expr = { git = "https://github.com/corwinjoy/datafusion.git", branch = "encryption-basics" }
datafusion-physical-plan = { git = "https://github.com/corwinjoy/datafusion.git", branch = "encryption-basics" }
datafusion-proto = { git = "https://github.com/corwinjoy/datafusion.git", branch = "encryption-basics" }
datafusion-sql = { git = "https://github.com/corwinjoy/datafusion.git", branch = "encryption-basics" }

# serde
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1"
strum = { version = "*"}


# "stdlib"
bytes = { version = "1" }
chrono = { version = ">0.4.34", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
regex = { version = "1" }
thiserror = { version = "2" }
url = { version = "2" }
urlencoding = "2.1.3"
uuid = { version = "1" }

# runtime / async
async-trait = { version = "0.1" }
futures = { version = "0.3" }
tokio = { version = "1" }
num_cpus = { version = "1" }

