[workspace]
members = ["crates/*", "delta-inspect", "python"]
exclude = ["proofs"]
resolver = "2"

[workspace.package]
authors = ["Qingping Hou <dave2008713@gmail.com>"]
rust-version = "1.82"
keywords = ["deltalake", "delta", "datalake"]
readme = "README.md"
edition = "2021"
description = "Native Delta Lake implementation in Rust"
homepage = "https://github.com/delta-io/delta.rs"
license = "Apache-2.0"
documentation = "https://docs.rs/deltalake"
repository = "https://github.com/delta-io/delta.rs"

[profile.release-with-debug]
inherits = "release"
debug = true

# Reducing the debuginfo for the test profile in order to trim the disk and RAM
# usage during development
# <https://github.com/delta-io/delta-rs/issues/1550?
[profile.test]
debug = "line-tables-only"

[workspace.dependencies]
delta_kernel = { path = "../delta-kernel-rs/kernel", version = "0.8.0", features = ["arrow_54", "default-engine-rustls"] }
#delta_kernel = { path = "../delta-kernel-rs/kernel", features = ["sync-engine"]  }

# arrow
# arrow = {  git = "https://github.com/rok/arrow-rs.git", branch = "encryption-basics" }
arrow = {  path = "../arrow-rs/arrow" }
arrow-arith = { path = "../arrow-rs/arrow-arith" }
arrow-array = {  path = "../arrow-rs/arrow-array", features = ["chrono-tz"] }
arrow-buffer = {  path = "../arrow-rs/arrow-buffer" }
arrow-cast = {  path = "../arrow-rs/arrow-cast" }
arrow-ipc = {  path = "../arrow-rs/arrow-ipc"}
arrow-json = {  path = "../arrow-rs/arrow-json" }
arrow-ord = {  path = "../arrow-rs/arrow-ord" }
arrow-row = {  path = "../arrow-rs/arrow-row" }
arrow-schema = {  path = "../arrow-rs/arrow-schema"}
arrow-select = {  path = "../arrow-rs/arrow-select" }
# object_store = { git = "https://github.com/rok/arrow-rs.git" , features = ["cloud"]}
object_store = {version="0.12.0"  , features = ["cloud"]}
# parquet = { version = "53" }
parquet = { path = "../arrow-rs/parquet" }

# datafusion
# datafusion = { git = "https://github.com/corwinjoy/datafusion.git", branch = "encryption-basics" }
datafusion = { path = "../datafusion/datafusion/core" }
datafusion-expr = { path = "../datafusion/datafusion/expr" }
datafusion-common = { path = "../datafusion/datafusion/common" }
datafusion-ffi = { path = "../datafusion/datafusion/ffi" }
datafusion-functions = { path = "../datafusion/datafusion/functions" }
datafusion-functions-aggregate = { path = "../datafusion/datafusion/functions-aggregate"}
datafusion-physical-expr = { path = "../datafusion/datafusion/physical-expr" }
datafusion-physical-plan = { path = "../datafusion/datafusion/physical-plan" }
datafusion-proto = { path = "../datafusion/datafusion/proto" }
datafusion-sql = { path = "../datafusion/datafusion/sql" }

# serde
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26"}


# "stdlib"
bytes = { version = "1" }
chrono = { version = "^0.4.40", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
regex = { version = "1" }
thiserror = { version = "2" }
url = { version = "2" }
urlencoding = "2.1.3"
uuid = { version = "1" }

# runtime / async
async-trait = { version = "0.1" }
futures = { version = "0.3" }
tokio = { version = "1" }
num_cpus = { version = "1" }
