[package]
name = "deltalake"
version = "0.25.0"
authors.workspace = true
keywords.workspace = true
readme.workspace = true
edition.workspace = true
homepage.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
# We cannot use all_features because TLS features are mutually exclusive.
features = ["azure", "datafusion", "gcs", "hdfs", "json", "python", "s3", "unity-experimental"]

[dependencies]
deltalake-core = { version = "0.25.0", path = "../core" }
deltalake-aws = { version = "0.8.0", path = "../aws", default-features = false, optional = true }
deltalake-azure = { version = "0.8.0", path = "../azure", optional = true }
deltalake-gcp = { version = "0.9.0", path = "../gcp", optional = true }
deltalake-hdfs = { version = "0.9.0", path = "../hdfs", optional = true }
deltalake-lakefs = { version = "0.8.0", path = "../lakefs", optional = true }
deltalake-catalog-glue = { version = "0.9.0", path = "../catalog-glue", optional = true }
deltalake-catalog-unity = { version = "0.9.0", path = "../catalog-unity", optional = true }
url = "2.5.4"
cocoon = { version = "0.4.3", features = ["std", "thiserror"]}
show-bytes = "0.2.0"
async-trait = "0.1.88"
cached = "0.55.1"
futures = "0.3.31"
log = "0.4.27"
bytes = "1.10.1"
rand = "0.9.1"
futures-core = "0.3.31"

# Anda dependencies
aes-gcm = "0.10"
async-stream = "0.3"
base64 = "0.22"
ciborium = "0.2"
moka = { version = "0.12", features = ["future"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
sha3 = "0.10"


[features]
# All of these features are just reflected into the core crate until that
# functionality is broken apart
azure = ["deltalake-azure"]
default = []
datafusion = ["deltalake-core/datafusion"]
datafusion-ext = ["datafusion"]
gcs = ["deltalake-gcp"]
glue = ["deltalake-catalog-glue"]
hdfs = ["deltalake-hdfs"]
json = ["deltalake-core/json"]
python = ["deltalake-core/python"]
s3-native-tls = ["deltalake-aws/native-tls"]
s3 = ["deltalake-aws/rustls"]
unity-experimental = ["deltalake-catalog-unity"]
lakefs = ["deltalake-lakefs"]

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = { workspace = true, default-features = false, features = ["clock"] }
tracing = { workspace = true }

[[example]]
name = "benchmark"
required-features = ["datafusion"]

[[example]]
name = "load_table"
required-features = ["datafusion"]

[[example]]
name = "recordbatch-writer"
